правки после ментора
добавлены стили

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,11 +31,8 @@
     </header>
 
     <main>
-        <!-- Hero -->
-        <h1 class="hero-portfolio">Портфолио</h1>
-        <!-- Filter -->
         <section class="section">
-            <h2 class=" section-work">Фильр категорий работ</h2>
+        <h1 class="portfolio">Портфолио</h1>
             <ul class="section-nav list">
                 <li>
                     <button type="button" class="button current">Все</button>
@@ -53,12 +50,8 @@
                     <button type="button" class="button">Маркетинг</button>
                 </li>
             </ul>
-        </section>
-
-        <!-- Example -->
-        <section class="section">
-            <h2 class="section-work">Работы</h2>
-            <ul class="work list">
+        
+            <ul class="work-exemple list">
                 <li>
                     <img src="./images/prtfl.jpg" alt="Первый пример работы" width="370" height="294" />
                     <h3 class="type">Технокряк</h3>
