--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main>
         <!-- HERO -->
         <section class="hero">
-            <h1>Эффективные решения для вашего бизнеса</h1>
+            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
             <button type="button" class="button">Заказать услугу</button>       
         </section>
 
