--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Веб-студия|Портфолио</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
@@ -15,14 +18,14 @@
 </head>
 
 <body>
-    <!-- Header -->
     <header class="header">
+        <div class="container">
         <nav>
-            <a href="/" class="logo">
+            <a href="/" class="logo link">
                 <span>Web</span>Studio
             </a>
             <ul class="site-nav list">
-                <li><a href="./index.html" class="link">Студия</a></li>
+                <li><a href="./index.html" class="link ">Студия</a></li>
                 <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
                 <li><a href="" class="link">Контакты</a></li>
             </ul>
@@ -31,10 +34,12 @@
             <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
+        </div>
     </header>
 
     <main>
-        <section class="section">
+        <section class="portfolio-section">
+            <div class="container">
         <h1 class="portfolio">Портфолио</h1>
             <ul class="section-nav list">
                 <li>
@@ -58,66 +63,69 @@
                 <li>
                     <img src="./images/prtfl.jpg" alt="Первый пример работы" width="370" height="294" />
                     <h3 class="type">Технокряк</h3>
-                    <p >Веб-сайт</p>
+                    <p class="work-text">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./images/prtfl1.jpg" alt="Второй пример работы" width="370" height="294" />
                     <h3 class="type">Постер New Orlean vs Golden Star</h3>
-                    <p >Дизайн</p>
+                    <p class="work-text">Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/prtfl2.jpg" alt="Третий пример работы" width="370" height="294" />
                     <h3 class="type">Ресторан Seafood</h3>
-                    <p >Приложение</p>
+                    <p class="work-text">Приложение</p>
                 </li>
                 <li>
                     <img src="./images/prtfl3.jpg" alt="Четвертый пример работы" width="370" height="294" />
                     <h3 class="type">Проект Prime</h3>
-                    <p >Маркетинг</p>
+                    <p class="work-text">Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/prtfl4.jpg" alt="Пятый пример работы" width="370" height="294" />
                     <h3 class="type">Проект Boxes</h3>
-                    <p >Веб-сайтr</p>
+                    <p class="work-text">Веб-сайтr</p>
                 </li>
                 <li>
                     <img src="./images/prtfl5.jpg" alt="Шестой пример работы" width="370" height="294" />
                     <h3 class="type">Inspiration has no Borders</h3>
-                    <p >Веб-сайт</p>
+                    <p class="work-text">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./images/prtfl6.jpg" alt="Седьмой пример работы" width="370" height="294" />
                     <h3 class="type">Издание Limited Edition</h3>
-                    <p >Дизайн</p>
+                    <p class="work-text"> Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/prtfl7.jpg" alt="Восьмой пример работы" width="370" height="294" />
                     <h3 class="type">Проект LAB</h3>
-                    <p >Маркетинг</p>
+                    <p class="work-text">Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/prtfl8.jpg" alt="Девятый пример работы" width="370" height="294" />
                     <h3 class="type">Growing Business</h3>
-                    <p >Приложение</p>
+                    <p class="work-text">Приложение</p>
                 </li>
             </ul>
+            </div>
         </section>      
     </main>
-    <!-- * FUOOTER *-->
+     <!-------------- FOOTER ---------------------->
     <footer class="page-footer">
-        <a href="/" class="logo-footer">
+        <div class="container">
+        <a href="/" class="logo-footer link">
             <span>Web</span>Studio
         </a>
         <address>
-            <ul class="list">
-                <li><a href="https://goo.gl/maps/BhmrnXZtfYNDPZvGA" target="_blank" title="г. Киев, пр-т Леси Украинки, 26"
+            <ul class="footer-list list">
+                <li class="footer-list-item"><a href="https://goo.gl/maps/BhmrnXZtfYNDPZvGA" target="_blank" title="г. Киев, пр-т Леси Украинки, 26"
                         class="link">
                         г. Киев, пр-т Леси Украинки, 26
                     </a></li>
-                <li><a href="mailto:info@devstudio.com" class="link contacts">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="link contacts">+38 096 111 11 11</a></li>
+                <li class="footer-list-item"><a href="mailto:info@devstudio.com" class="link contacts">info@devstudio.com</a></li>
+                <li class="footer-list-item"><a href="tel:+380961111111" class="link contacts">+38 096 111 11 11</a></li>
             </ul>
         </address>
+        </div>
     
     </footer>
 </body>
